# Asteroid-Formation

./: .gitignore  README.md  conda_requirements.txt  project_plan.md  prompt.md  test.py
initial_conditions/: 1.json
src/: analyze_tree.py  collision_detection.py  data_handler.py  initial_conditions.py  integrator.py  interactive_visualizaer.py  interactive_visualizer.py  interactive_visualizer_2.py  interactive_visualizer_modified.py  main.py  particle_data.py  physics.py  plot_density.py  plot_mass_histograms.py  simulation.py  visualization.py
src/computation/: CMakeLists.txt  cpu_numpy.py  setup.py
src/computation/cpp_cuda_ext/: binding.cpp  n2_kernels.cu  nbody_kernels.h
src/computation/cpp_cuda_ext/src_cpp/: barnes_hut_cpu.cpp  cpu_n2.cpp  spatial_hash_cpu.cpp
src/computation/cpp_cuda_ext/src_cuda/: n2_kernels.cu
src/computation/cpp_cuda_kernel/: nbody_kernels.h  setup.py
src/computation/cuda_nbody/: binding.cpp  nbody_kernels.cu  nbody_kernels.h
visualization_data/: log_profile.txt  log_speed.txt
